--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -20,6 +20,10 @@
   align-items: center;
 }
 
+.footer__links{
+  list-style: none;
+}
+
 .footer__link {
   color: #333;
   text-decoration: none;
@@ -51,23 +55,43 @@
   .footer {
     flex-direction: row-reverse;
     justify-content: space-between;
-    padding: 20px;
+    padding: 20px 20px 20px 40px;
   }
 
   .footer__content {
     gap: 20px;
-    justify-content: flex-end;
+    /* justify-content: flex-end; */
   }
 
   .footer__copyright {
-    align-self: flex-end;
+    align-self: center;
+  }
+}
+
+@media screen and (max-width: 484px){
+  .footer{
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .footer__content{
+    margin-top: 20px;
+  }
+
+  .footer__copyright{
+    font-size: 14px;
+    line-height: 14px;
+  }
+
+  .footer__links{
+    padding-left: 10px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .footer {
     flex-direction: column;
-    padding: 162px 0 0;
+    padding: 100px 0 0;
   
   }
 
@@ -80,15 +104,18 @@
   .footer__links {
     flex-direction: column;
     align-items: flex-start;
+    padding-left: 10px;
   }
 
   .footer__icons {
     justify-content: flex-start;
     margin-bottom: 30px;
+    padding-right: 10px;
   }
 
   .footer__copyright {
     margin-top: 40px;
+    padding-left: 20px;
     align-self: flex-start;
   }
 }
