--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,6 +4,8 @@
   display: flex;
   flex-direction: column;
   color: white;
+  max-width: 100vw;
+  width: 100%;
 }
 
 .header__background {
@@ -65,7 +67,6 @@
   }
 
   .header__content {
-    display: flex;
     margin-top: 80px;
     max-width: 452px;
     position: relative;
@@ -77,7 +78,8 @@
     line-height: 40px;
     max-width: 385px;
     max-height: 80px;
-    text-align: left;
+    text-align: center;
+    
   }
 
   .header__subtitle {
