--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,8 +1,11 @@
 .main__content {
   padding: 40px;
+  justify-content: center;
+  align-items: center;
 }
 
 .main__more-btn {
+  font-family: 'Roboto', sans-serif;
   background-color: white;
   border-style: none;
   height: 64px;
@@ -24,6 +27,9 @@
 @media screen and (max-width: 728px) {
   .main__content {
     padding: 40px;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
   }
 
   .main__more-btn {
@@ -49,6 +55,9 @@
     position: relative;
     z-index: 3;
     padding: 20px 0;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
   }
 
   .main__title {
@@ -56,6 +65,7 @@
     font-size: 30px;
     line-height: 34px;
     margin: 0 0 38px 0;
+    display: flex;
   }
 
   .main__more-btn {
