--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -51,6 +51,8 @@
 
 .modal__title {
   position: relative;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 900;
   font-size: 24px;
   margin: 0 0 24px 0;
   bottom: 10px;
@@ -90,7 +92,7 @@
   display: flex;
   flex-direction: column;
   font-size: 16px;
-  font-family: Inter;
+  font-family: 'Inter', sans-serif;
   font-size: 12px;
   font-weight: 400;
   line-height: 14.52px;
@@ -104,6 +106,7 @@
   margin-top: 8px;
   padding: 10px;
   font-size: 14px;
+  font-family: 'Inter', sans-serif;
   border: none;
   border-bottom: 1px solid #ccc;
   background-color: transparent;
