--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -1,6 +1,7 @@
 .card {
-  width: 400px;
-  height: 576px;
+  width: 100%;  /* Let the card take up full width within its container */
+  max-width: 400px; /* Fixed max-width */
+  height: 576px; /* Fixed height */
   background-color: white;
   border: 1px solid #ccc;
   border-radius: 16px;
@@ -13,13 +14,31 @@
 .card__image-container {
   position: relative;
   width: 100%;
-  height: 272px;
+  height: 272px; /* Fixed height for the image section */
 }
 
 .card__image {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.card__content {
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-grow: 1;
+  overflow: hidden;
+  min-height: 200px; /* Ensure content takes up space even when no image */
+}
+
+.card__description {
+  font-family: 'Roboto', sans-serif;
+  max-height: 80px; /* Limit the description height to keep consistency */
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-wrap: break-word;
 }
 
 .card__save-btn-container {
@@ -118,14 +137,14 @@
   border-radius: 4px;
 }
 
-.card__content {
+/* .card__content {
   padding: 16px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
   overflow: hidden;
-}
+} */
 
 .card__date {
   font-size: 18px;
@@ -142,7 +161,7 @@
   margin: 0 0 8px 0;
 }
 
-.card__description {
+/* .card__description {
   font-size: 16px;
   font-weight: 400;
   line-height: 22px;
@@ -151,7 +170,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   word-wrap: break-word;
-}
+} */
 
 .card__author {
   font-size: 16px;
