--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -38,6 +38,7 @@
     width: 100%;
     margin-left: 15px;
     bottom: 25px;
+    flex-shrink: 1;
   }
 
   .search-form__input {
@@ -60,6 +61,13 @@
     box-shadow: 0px 5px 15px 0px rgba(14, 26, 57, 0.2);
     background: rgba(47, 113, 229, 1);
     color: white;
+  }
+}
+
+@media screen and (max-width: 468px){
+  .search-form{
+    max-width: 300px;
+    margin-left: 0;
   }
 }
 
