--- a/src/fonts.css
+++ b/src/fonts.css
@@ -26,6 +26,34 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'Roboto';
+    src: url(./vendor/fonts/roboto-700.woff) format('woff');
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: url(./vendor/fonts/roboto-900.woff) format('woff');
+    font-weight: 900;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Inter';
+    src: url(./vendor/fonts/inter-400-regular.woff) format('woff');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Inter';
+    src: url(./vendor/fonts/inter-500.woff) format('woff');
+    font-weight: 500;
+    font-style: normal;
+}
+
 body {
     font-family: 'Roboto Slab' , sans-serif;
     font-weight: 400;
