--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -1,7 +1,7 @@
 .card {
-  width: 100%;  /* Let the card take up full width within its container */
-  max-width: 400px; /* Fixed max-width */
-  height: 576px; /* Fixed height */
+  width: 100%;  
+  max-width: 400px; 
+  height: 576px; 
   background-color: white;
   border: 1px solid #ccc;
   border-radius: 16px;
@@ -14,7 +14,7 @@
 .card__image-container {
   position: relative;
   width: 100%;
-  height: 272px; /* Fixed height for the image section */
+  height: 272px; 
 }
 
 .card__image {
@@ -30,12 +30,12 @@
   justify-content: space-between;
   flex-grow: 1;
   overflow: hidden;
-  min-height: 200px; /* Ensure content takes up space even when no image */
+  min-height: 200px; 
 }
 
 .card__description {
   font-family: 'Roboto', sans-serif;
-  max-height: 80px; /* Limit the description height to keep consistency */
+  max-height: 80px; 
   overflow: hidden;
   text-overflow: ellipsis;
   word-wrap: break-word;
@@ -125,6 +125,7 @@
 }
 
 
+
 .card__keyword {
   position: absolute;
   top: 10px;
@@ -179,6 +180,15 @@
   color: #555;
   text-transform: uppercase;
   margin-top: auto;
+}
+
+.card__image-placeholder{
+  display: flex;
+ justify-content: center;
+ align-items: center;
+ align-self: center;
+ text-align: center;
+ margin: 100px auto;
 }
 
 @media screen and (max-width: 728px) {
