--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -25,7 +25,7 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
-  padding: 20px; 
+  padding: 20px 20px 50px 20px; 
 }
 
 .about__title {
