--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -118,6 +118,30 @@
   box-shadow: none;
 }
 
+.modal__success-message {
+  text-align: left;
+  font-size: 24px;
+  line-height: 28px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 900;
+  margin: 0 0 20px 0;
+}
+
+.modal__sign-in-link {
+  /* margin-top: 20px; */
+  display: inline-block;
+  padding: 10px 10px 10px 0;
+  color: #007bff;
+  background: transparent;
+  border-radius: 8px;
+  font-size: 16px;
+  text-decoration: none;
+  border: none;
+  cursor: pointer;
+}
+
+
+
 @media (max-width: 320px) {
   .modal_opened {
     height: 100vh;
