--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -13,7 +13,7 @@
   width: 100%;
   height: 100%;
   background-size: cover;
-  background-image: url("../../assets/desktopheader.svg");
+  background-image: url("../../assets/header.png");
   background-repeat: no-repeat;
   background-position: center;
   z-index: 1;
