--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -27,7 +27,7 @@
 .footer__link {
   color: #333;
   text-decoration: none;
-  font-family: Roboto;
+  font-family: 'Roboto', sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 24px;
@@ -42,7 +42,7 @@
 }
 
 .footer__copyright {
-  font-family: Roboto;
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 22px;
@@ -60,7 +60,6 @@
 
   .footer__content {
     gap: 20px;
-    /* justify-content: flex-end; */
   }
 
   .footer__copyright {
