--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -115,7 +115,7 @@
 }
 
 .modal__input:focus {
-  box-shadow: none;
+  border-bottom: 1px solid #333;
 }
 
 .modal__success-message {
@@ -145,19 +145,22 @@
 @media (max-width: 320px) {
   .modal_opened {
     height: 100vh;
-    animation: slideUp 0.4s ease-out forwards; /* Apply the slide-up animation */
+    width: 100vw;
+    animation: slideUp 0.4s ease-out forwards; 
     position: fixed;
     top: 40px;
     background: none;
     bottom: 0;
     left: 0;
     display: flex;
-    /* flex-direction: column; */
+    
   }
 
   .modal__content{
     padding: 10px;
     height: 90vh;
+    margin-right: auto;
+    width: 320px;
   }
 
   .modal__close-btn{
@@ -173,6 +176,7 @@
 
  .modal__input{
   padding-left: 0;
+  width: 280px;
  }
 
   .modal__label{
