--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -26,8 +26,15 @@
   border-radius: 50px;
   border: none;
   box-shadow: 0px 5px 15px 0px rgba(14, 26, 57, 0.2);
-  background: rgba(47, 113, 229, 1);
+  background: #2F71E5;
   color: white;
+}
+
+.search-form__btn:hover{
+  background: #347EFF;
+}
+.search-form__btn:active{
+  background: #2A65CC;
 }
 
 @media screen and (max-width: 728px) {
