--- a/src/components/SavedArticlesList/SavedArticlesList.css
+++ b/src/components/SavedArticlesList/SavedArticlesList.css
@@ -1,26 +1,19 @@
 .saved-articles-list {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); 
-  gap: 20px; 
-  padding: 80px 30px 80px 50px; 
+  grid-template-columns: repeat(auto-fit, 400px);
+  justify-content: center;
+  gap: 20px;
+  margin: 0 auto;
+  padding: 60px 0;
   list-style: none;
-  box-sizing: border-box; 
+  box-sizing: border-box;
+  max-width: 1440px;
 }
-
 
 .saved-articles-list li {
   list-style: none;
-  max-width: 400px;
 }
 
-@media screen and (max-width: 960px) {
-  .saved-articles-list {
-    grid-template-columns: repeat(3, 1fr);
-    gap: 16px;
-    padding: 20px;
-    margin-top: 20px; 
-  }
-}
 
 @media screen and (max-width: 728px) {
   .saved-articles-list {
@@ -36,7 +29,7 @@
     grid-template-columns: repeat(1, 1fr);
     gap: 12px;
     padding: 10px;
-    margin-top: 32px;
+    margin-top: 16px;
   }
 
   .saved-articles-list li {
