--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -41,7 +41,7 @@
   font-family: 'Roboto', sans-serif;
   max-height: 80px; 
   display: -webkit-box;
-  -webkit-line-clamp: 3; /* Limits text to 3 lines */
+  -webkit-line-clamp: 3; 
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -57,7 +57,7 @@
   justify-content: flex-end;
 }
 
-/* Save Button Styles */
+
 .card__save-btn {
   width: 40px;
   height: 40px;
@@ -81,7 +81,6 @@
   background: url("../../assets/saved.svg") no-repeat center;
 }
 
-/* Delete Button Styles */
 .card__delete-btn {
   width: 40px;
   height: 40px;
@@ -98,7 +97,6 @@
   height: 40px;
 }
 
-/* Slide-out Button Styles */
 .card__slide-out-btn,
 .card__delete-slide {
   position: absolute;
@@ -179,7 +177,7 @@
   font-weight: 400;
   margin: 0 0 8px 0;
   display: -webkit-box;
-  -webkit-line-clamp: 3; /* Limits text to 3 lines */
+  -webkit-line-clamp: 3; 
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -228,7 +226,7 @@
   }
 
   .card__image-container {
-    height: 150px; /* Fixed height for images */
+    height: 150px; 
   }
 
   .card__content {
@@ -254,13 +252,19 @@
   }
 
   .card__title {
-    font-size: 18px; /* Adjusted title size for smaller cards */
+    font-size: 18px; 
     line-height: 22px;
   }
 
   .card__author,
   .card__date {
-    font-size: 12px; /* Smaller metadata text */
+    font-size: 12px; 
+  }
+}
+
+@media screen and (max-width: 505px){
+  .card__keyword{
+     visibility: hidden;
   }
 }
 
@@ -280,6 +284,10 @@
     right: 8px;
     width: 24px;
     height: 24px;
+  }
+
+  .card__keyword{
+    visibility: visible;
   }
 
   .card__date,
