--- a/src/components/SavedArticlesList/SavedArticlesList.css
+++ b/src/components/SavedArticlesList/SavedArticlesList.css
@@ -24,6 +24,15 @@
   }
 }
 
+@media screen and (max-width: 505px) {
+  .saved-articles-list {
+    grid-template-columns: repeat(2, 1fr); 
+    gap: 16px;
+    padding: 20px;
+    margin-top: 20px;
+  }
+}
+
 @media screen and (max-width: 421px) {
   .saved-articles-list {
     grid-template-columns: repeat(1, 1fr);
